        * Adapt files in directory "applicator/file/"
        * Adapt files in directory "applicator/calculate/"
        * Adapt files in directory "applicator/communicate/"
        * Move functionality of "applicator/communicate/send/" and "applicator/communicate/receive/"
            to "executor/communicator/sender/" and "executor/communicator/receiver/"

2011-09-09  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt files in directories "executor/maintainer/" and "applicator/maintain/"

2011-08-28  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt files of "applicator/modify/" and other directories
        * Introduce "shrink" flag for adjusting destination count when using "overwrite" operation
        * Move sub directories of "applicator/maintain/" to new directory "executor/maintainer/"

2011-08-27  Christian Heller  <christian.heller@tuxtax.de>

        * Move old files of "applicator/memoriser/" into new directories "applicator/memorise/" and "applicator/modify/"
        * Move old files of "applicator/calculator/" into new directory "applicator/calculate/"
        * Move old files of "applicator/filer/" into new directory "applicator/file/"
        * Move old files of "applicator/runner/" into new directory "applicator/run/"
        * Adapt files of "applicator/memorise/" and "applicator/modify/"

2011-08-24  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt old files of "applicator/maintainer/" and move into new directory "applicator/maintain/"
        * Move "sense.c" from "applicator/communicate/" into directory "applicator/live/"
        * Move "interrupt.c" from "applicator/maintainer/" into directory "applicator/live/"

2011-08-22  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt old files of "applicator/comparator/" and move into new directory "applicator/compare/"

2011-08-18  Christian Heller  <christian.heller@tuxtax.de>
